--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     gtag('config', 'G-55V1E709SK');
   </script>
 
+
+
   <meta charset="utf-8">
   <meta name="description"
     content="WE-GS, an efficient 3D Gaussian Representation for unconstrained photo collections. ">
@@ -264,7 +266,7 @@
                   <div id="example1" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/brand-wegs-1.gif">
+                      <img id="1-a" src="./materials/video/comp/brand-wegs-1.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -272,7 +274,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/brand-cr-1.gif"  alt="GIF Loop">
+                        <img id="1-b" src="./materials/video/comp/brand-cr-1.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -286,11 +288,11 @@
 
                   </div>
                       <img src="./materials/video/comp/brand-ref-1.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 1</p>
                   <div id="example2" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/brand-wegs-2.gif">
+                      <img id="2-a" src="./materials/video/comp/brand-wegs-2.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -298,7 +300,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                      <img src="./materials/video/comp/brand-cr-2.gif">
+                      <img id="2-b" src="./materials/video/comp/brand-cr-2.gif">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -311,11 +313,11 @@
                     </div>
                   </div>
                       <img src="./materials/video/comp/brand-ref-2.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 2</p>
                   <div id="example3" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/brand-wegs-3.gif">
+                      <img id="3-a" src="./materials/video/comp/brand-wegs-3.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -323,7 +325,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                      <img src="./materials/video/comp/brand-ha-3.gif">
+                      <img id="3-b" src="./materials/video/comp/brand-ha-3.gif">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -336,11 +338,11 @@
                     </div>
                   </div>
                       <img src="./materials/video/comp/brand-ref-3.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 3</p>
                   <div id="example4" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/brand-wegs-4.gif">
+                      <img id="4-a" src="./materials/video/comp/brand-wegs-4.gif">
                       <div class="bal-afterPosition afterLabel">
                         Ours
                       </div>
@@ -348,7 +350,7 @@
 
                     <div class="bal-before" style="width: 50%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                      <img src="./materials/video/comp/brand-ha-4.gif">
+                      <img id="4-b" src="./materials/video/comp/brand-ha-4.gif">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -361,7 +363,7 @@
                     </div>
                   </div>
                       <img src="./materials/video/comp/brand-ref-4.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 4</p>
                 </div>
               </div>
             </div>
@@ -377,7 +379,7 @@
                   <div id="example5" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/sacre-wegs-2.gif">
+                      <img id="5-a" src="./materials/video/comp/sacre-wegs-2.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -385,7 +387,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/sacre-cr-2.gif"  alt="GIF Loop">
+                        <img id="5-b" src="./materials/video/comp/sacre-cr-2.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -399,11 +401,11 @@
 
                   </div>
                       <img src="./materials/video/comp/sacre-ref-2.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 1</p>
                   <div id="example6" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/sacre-wegs-3.gif">
+                      <img id="6-a" src="./materials/video/comp/sacre-wegs-3.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -411,7 +413,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/sacre-cr-3.gif"  alt="GIF Loop">
+                        <img id="6-b" src="./materials/video/comp/sacre-cr-3.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -425,11 +427,11 @@
 
                   </div>
                                         <img src="./materials/video/comp/sacre-ref-3.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 2</p>
                   <div id="example7" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/sacre-wegs-1.gif">
+                      <img id="7-a" src="./materials/video/comp/sacre-wegs-1.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -437,7 +439,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/sacre-ha-1.gif"  alt="GIF Loop">
+                        <img id="7-b" src="./materials/video/comp/sacre-ha-1.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -451,11 +453,11 @@
 
                   </div>
                       <img src="./materials/video/comp/sacre-ref-1.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 3</p>
                   <div id="example8" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/sacre-wegs-4.gif">
+                      <img id="8-a" src="./materials/video/comp/sacre-wegs-4.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -463,7 +465,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/sacre-ha-4.gif"  alt="GIF Loop">
+                        <img id="8-a" src="./materials/video/comp/sacre-ha-4.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -477,7 +479,7 @@
 
                   </div>
                         <img src="./materials/video/comp/sacre-ref-4.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 4</p>
 
                 </div>
               </div>
@@ -491,7 +493,7 @@
                 <div id="example9" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/trevi-wegs-2.gif">
+                      <img id="9-a" src="./materials/video/comp/trevi-wegs-2.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -499,7 +501,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/trevi-cr-2.gif"  alt="GIF Loop">
+                        <img id="9-b" src="./materials/video/comp/trevi-cr-2.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -513,11 +515,11 @@
 
                   </div>
                         <img src="./materials/video/comp/trevi-ref-2.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 1</p>
                   <div id="example10" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/trevi-wegs-4.gif">
+                      <img id="10-a" src="./materials/video/comp/trevi-wegs-4.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -525,7 +527,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/trevi-cr-4.gif"  alt="GIF Loop">
+                        <img id="10-b" src="./materials/video/comp/trevi-cr-4.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           CR-NeRF [Yang 2023]
                         </div>
@@ -539,11 +541,11 @@
 
                   </div>
                                         <img src="./materials/video/comp/trevi-ref-4.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 2</p>
                   <div id="example11" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/trevi-wegs-1.gif">
+                      <img id="11-a" src="./materials/video/comp/trevi-wegs-1.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -551,7 +553,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/trevi-ha-1.gif"  alt="GIF Loop">
+                        <img id="11-b" src="./materials/video/comp/trevi-ha-1.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -565,14 +567,14 @@
 
                   </div>
                         <img src="./materials/video/comp/trevi-ref-1.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 3</p>
 
 
 
                   <div id="example12" class="bal-container-small">
 
                     <div class="bal-after">
-                      <img src="./materials/video/comp/trevi-wegs-3.gif">
+                      <img id="12-a" src="./materials/video/comp/trevi-wegs-3.gif">
                       <div class="bal-afterPosition afterLabel" style="z-index:1;">
                         Ours
                       </div>
@@ -580,7 +582,7 @@
 
                     <div class="bal-before" style="width:96.4968152866242%;">
                       <div class="bal-before-inset" style="width: 512px;">
-                        <img src="./materials/video/comp/trevi-ha-3.gif"  alt="GIF Loop">
+                        <img id="12-b" src="./materials/video/comp/trevi-ha-3.gif"  alt="GIF Loop">
                         <div class="bal-beforePosition beforeLabel">
                           Ha-NeRF [Chen 2023]
                         </div>
@@ -594,7 +596,7 @@
 
                   </div>
                                                             <img src="./materials/video/comp/trevi-ref-3.png">
-                      <p>Target Appearance Photo</p>
+                      <p>Target Appearance Photo 4</p>
 
               </div>
             </div>
@@ -866,6 +868,60 @@
       </div>
     </div>
   </footer>
+
+<script>
+  // 获取所有 GIF 图片元素
+  const gifs = document.querySelectorAll('.gif');
+
+  // 计数器，用于记录 GIF 图片加载完成的数量
+  let loadedCount = 0;
+
+  // 加载完成回调函数
+  function handleLoad() {
+    // 每次加载完成计数器加1
+    loadedCount++;
+    // 如果所有 GIF 图片都加载完成，则开始播放
+    if (loadedCount === gifs.length) {
+      playGifs();
+    }
+  }
+
+  // 播放 GIF 图片
+  function playGifs() {
+    // 找到每对 GIF 图片，设置它们的播放位置和播放状态
+    const pairs = [
+      ['1-a', '1-b'],
+      ['2-a', '2-b'],
+      ['3-a', '3-b'],
+      ['4-a', '4-b'],
+      ['5-a', '5-b'],
+      ['6-a', '6-b'],
+      ['7-a', '7-b'],
+      ['8-a', '8-b'],
+      ['9-a', '9-b'],
+      ['10-a', '10-b'],
+      ['11-a', '11-b'],
+      ['12-a', '12-b'],
+      // Add more pairs as needed
+    ];
+    pairs.forEach(pair => {
+      const gif1 = document.getElementById(pair[0]);
+      const gif2 = document.getElementById(pair[1]);
+      // 确保两个 GIF 图片都是可见的
+      gif1.style.visibility = 'visible';
+      gif2.style.visibility = 'visible';
+      // 播放两个 GIF 图片
+      gif1.play();
+      gif2.play();
+    });
+  }
+
+  // 遍历所有 GIF 图片，为每个 GIF 图片添加加载完成事件监听器
+  gifs.forEach(gif => {
+    gif.addEventListener('load', handleLoad);
+  });
+</script>
+
 
 </body>
 
